--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,12 @@
       <div class="container">
         <div class="row">
           <div class="medium-2 columns">
-            <%= image_tag 'ips-logo-orange', class: 'logo' %>
+            <%= image_tag 'logo', class: 'logo' %>
           </div>
           <div class="medium-8 columns">
             <p><%= t :company_legal_name %>, Vancouver, BC, Canada</p>
             <p>
-              <span><%= mail_to 'info@innovativepricingsolutions.com' %></span>
+              <span><%= mail_to 'info@finx.ca' %></span>
               <% if user_signed_in? %>
                 <span><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></span>
               <% end %>
