fix issue in responsive

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                 <span><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></span>
               <% end %>
             </p>
-            <p>Developed by <%= link_to 'Pieoneers', 'http://pieoneers.com/' %></p>
+            <p>FinX Software Solutions</p>
           </div>
           <div class="medium-2 columns">
               <p class="right">
@@ -41,6 +41,5 @@
         </div>
       </div>
     </footer>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
