--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -66,7 +66,7 @@
 
         .player {
             position: sticky;
-            top: 30px;
+            top: 0;
             z-index: 10;
         }
 
