--- a/app/assets/stylesheets/_landing.scss
+++ b/app/assets/stylesheets/_landing.scss
@@ -160,4 +160,36 @@ $bg-color: #5d2100;
       font-size: inherit;
     }
   }
+
+  .bottom-row {
+    max-width: 1400px;
+    width: 90%;
+    display: flex;
+    justify-content: space-around;
+    .item {
+      flex: 1 1 0px;
+      padding: 20px;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 1215px) {
+  .bottom-row {
+    .item {
+      p {
+        display: none;
+      }
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .bottom-row {
+    flex-wrap: wrap;
+    .item {
+      max-width: 100px;
+      min-width: 100px;
+    }
+  }
 }
