--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Innovative Pricing Solutions</title>
+    <title>Finx Software</title>
 
     <%= stylesheet_link_tag    "application", media: 'all' %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -37,50 +37,52 @@
         </div>
       </div>
     </footer>
-    <div class="bottom-row">
-      <div class="item">
-          <img src="/assets/patent-system.svg" class="icon">
-          <p>Patent System</p>
-      </div>
+    <div class="bottom">
+      <div class="bottom-row">
+        <div class="item">
+            <img src="/assets/patent-system.svg" class="icon">
+            <p>Patent System</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/increases-profit.svg" class="icon">
-          <p>Increases Profit Per Unit</p>
-      </div>
+        <div class="item">
+            <img src="/assets/increases-profit.svg" class="icon">
+            <p>Increases Profit Per Unit</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/increases-product-penetrations.svg" class="icon">
-          <p>Increases Product Penetrations</p>
-      </div>
+        <div class="item">
+            <img src="/assets/increases-product-penetrations.svg" class="icon">
+            <p>Increases Product Penetrations</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/buy-down-interest-rates.svg" class="icon">
-          <p>Buy Down Interest Rate</p>
-      </div>
+        <div class="item">
+            <img src="/assets/buy-down-interest-rates.svg" class="icon">
+            <p>Buy Down Interest Rate</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/recapture.svg" class="icon">
-          <p>Recapture Lost Dealer Reserve</p>
-      </div>
+        <div class="item">
+            <img src="/assets/recapture.svg" class="icon">
+            <p>Recapture Lost Dealer Reserve</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/finance-training.svg" class="icon">
-          <p>Finance Training &amp; Support</p>
-      </div>
+        <div class="item">
+            <img src="/assets/finance-training.svg" class="icon">
+            <p>Finance Training &amp; Support</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/increases-cash-conversions.svg" class="icon">
-          <p>Increases Cash Conversions</p>
-      </div>
+        <div class="item">
+            <img src="/assets/increases-cash-conversions.svg" class="icon">
+            <p>Increases Cash Conversions</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/beats-lines-of-credit-rates.svg" class="icon">
-          <p>Beats Lines of Credit Rates</p>
-      </div>
+        <div class="item">
+            <img src="/assets/beats-lines-of-credit-rates.svg" class="icon">
+            <p>Beats Lines of Credit Rates</p>
+        </div>
 
-      <div class="item">
-          <img src="/assets/low-pressure-sales-tactics.svg" class="icon">
-          <p>Low Pressure Sales Tactics</p>
+        <div class="item">
+            <img src="/assets/low-pressure-sales-tactics.svg" class="icon">
+            <p>Low Pressure Sales Tactics</p>
+        </div>
       </div>
     </div>
   </body>
