--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -4,9 +4,7 @@
 
   .form
     .form-text
-      %h2 A Brave New Way to
-      %h2 Boost Your Auto-financing
-      %h2 & Aftermarket Profits
+      %h2 A Brave New Way to Boost Your Auto-financing & Aftermarket Profits
       %h3 WITH OUR CUSTOM FINANCE MENU SELLING SOFTWARE
     .form-fields
       = form_for :user, url: session_path(:user) do |f|
@@ -21,4 +19,4 @@
     %li
       = mail_to 'info@finx.ca', 'Support'
     %li
-      = link_to 'Legal info', '/IPS%20Software%20Services%20Terms%20and%20Conditions.pdf'
+      = link_to 'Legal info', '/Terms%20&%20Conditions.pdf'
