--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -28,7 +28,7 @@ body {
     footer {
       margin-top: auto;
       padding: rem-calc(15) 0;
-      background-color: #757575;
+      background-color: black;
       font-size: rem-calc(12);
       color: $base;
 
