update activity logs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,8 @@
   "deals",
   "product_lists",
   "worksheets",
-  "video";
+  "video",
+  "activitylogs";
 
 @import "plyr";
 @import "owl.carousel";
