--- a/app/assets/stylesheets/video.scss
+++ b/app/assets/stylesheets/video.scss
@@ -59,6 +59,7 @@
 
 .page-content {
     padding-top: 30px;
+    padding-bottom: 100px;
     .video-content {
         display: flex;
         flex-flow: column;
