--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -25,6 +25,10 @@ body {
       }
     }
 
+    main {
+      padding-bottom: 100px;
+    }
+
     footer {
       padding: rem-calc(15) 0;
       background-color: black;
