update style with new color, logo and landing image

--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,6 +1,7 @@
 .landing-page-content
 
-  = image_tag 'logo', class: 'logo'
+  = image_tag 'FinxSoftware-LOGO-WHITE', class: 'logo'
+  = image_tag 'FinxSoftware-LOGO-BLACK', class: 'logo-mobile'
 
   .form
     .form-text
