--- a/app/assets/stylesheets/_landing.scss
+++ b/app/assets/stylesheets/_landing.scss
@@ -1,4 +1,4 @@
-$bg-color: #5d2100;
+$bg-color: #42A5F5;
 
 .landing {
   width: 100%;
@@ -35,7 +35,7 @@ $bg-color: #5d2100;
     flex-direction: column;
     justify-content: space-between;
 
-    .logo, .sub-nav, footer {
+    .logo, .logo-mobile, .sub-nav, footer {
       padding: $column-gutter;
   
       @media #{$small-only} {
@@ -44,8 +44,20 @@ $bg-color: #5d2100;
     }
   
     .logo {
-      width: 24rem;
-      height: 11rem;
+      width: 350px;
+      height: 100px;
+      @media #{$small-only} {
+        display: none;
+      }
+    }
+
+    .logo-mobile {
+      display: none;
+      width: 350px;
+      height: 100px;
+      @media #{$small-only} {
+        display: block;
+      }
     }
   
     a {
@@ -75,7 +87,7 @@ $bg-color: #5d2100;
         }
     
         h3 {
-          color: #ff590a;
+          color: #0D47A1;
           font-size: 23px;
           text-transform: uppercase;
           // margin-top: 20px;
@@ -91,7 +103,7 @@ $bg-color: #5d2100;
         padding: 0 rem-calc(20);
         color: inherit;
         background-color: rgba($bg-color, 0.5);
-        border-color: #E65100;
+        border-color: #0D47A1;
         font-size: rem-calc(16);
   
         &:focus {
@@ -110,13 +122,13 @@ $bg-color: #5d2100;
   
       .button {
         width: 100%;
-        border: 2px solid #E65100;
+        border: 2px solid #0D47A1;
         border-radius: 0;
         background-color: #1b81c1;
         transition-duration: 200ms;
   
         &:hover {
-          background-color: #f45914;
+          background-color: #0D47A1;
         }
       }
     }
@@ -234,7 +246,7 @@ $bg-color: #5d2100;
     min-height: 700px!important;
   }
 
-  .logo {
+  .logo, .logo-mobile {
     margin: 1rem auto!important;
   }
 
