--- a/app/assets/stylesheets/_landing.scss
+++ b/app/assets/stylesheets/_landing.scss
@@ -20,7 +20,9 @@ $bg-color: #42A5F5;
     display: block;
     position: fixed;
     top: 0; bottom: 0; left: 0; right: 0;
-    background-image: image-url(landing-bg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
+    image-url(landing-bg);
+    // background-image: image-url(landing-bg);
     background-size: cover;
     background-position: center center;
     z-index: -1;
@@ -46,6 +48,9 @@ $bg-color: #42A5F5;
     .logo {
       width: 350px;
       height: 100px;
+      // border: 1px solid #0D47A1;
+      
+      // background: rgba(66, 165, 245, 0.5);
       @media #{$small-only} {
         display: none;
       }
@@ -75,6 +80,7 @@ $bg-color: #42A5F5;
       color: white;
       display: flex;
       justify-content: space-between;
+      align-items: flex-end;
       padding: 10px 30px;
 
       .form-text {
@@ -98,6 +104,7 @@ $bg-color: #42A5F5;
 
       .form-fields {
         width: 30%;
+        // margin-top: 60px;
       }
   
       input[type="text"], input[type="email"], input[type="password"] {
